--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*",
-		"cartalyst/sentry": "2.1.*"
+		"laravel/framework": "4.2",
+		"cartalyst/sentry": "2.0.*",
+		"nesbot/carbon": "*"
 	},
 	"autoload": {
 		"classmap": [
